--- a/packages/extension/src/languages/en.json
+++ b/packages/extension/src/languages/en.json
@@ -83,6 +83,12 @@
   "setting.keyring.change.input.name.error.invalid": "Account name is invalid",
   "setting.keyring.change.name.button.save": "Save",
 
+  "setting.keyring.create.name": "Create Account Name",
+  "setting.keyring.create.input.name": "New account name",
+  "setting.keyring.create.input.name.error.required": "Account name is required",
+  "setting.keyring.create.input.name.error.invalid": "Account name is invalid",
+  "setting.keyring.create.name.button.save": "Created",
+
   "setting.export": "View Mnemonic Seed",
   "setting.export.private-key": "View Private Key",
   "setting.export.warning": "Please input your password to proceed",
