--- a/packages/extension/src/languages/en.json
+++ b/packages/extension/src/languages/en.json
@@ -136,7 +136,7 @@
 
   "setting.autolock": "Auto-Lock Timer",
   "setting.autolock.duration": "Set the duration (unit: minutes)",
-  "setting.autolock.description": "With Auto-Lock enabled, Keplr will lock when the device is in sleep mode",
+  "setting.autolock.description": "With Auto-Lock enabled, Mises Wallet will lock when the device is in sleep mode",
   "setting.autolock.error.required": "Duration is required",
   "setting.autolock.error.out-of-range": "It cannot be less than 0 or greater than 4320(3days)",
 
