--- a/packages/extension/src/languages/en.json
+++ b/packages/extension/src/languages/en.json
@@ -63,7 +63,7 @@
   "setting.address-book.confirm.delete-address.paragraph": "Are you sure you want to delete this address?",
   "setting.address-book.button.save": "Save",
 
-  "setting.export-to-mobile": "Link Keplr Mobile",
+  "setting.export-to-mobile": "Link Mises Mobile",
   "setting.export-to-mobile.input.password": "Password",
   "setting.export-to-mobile.input.password.error.required": "Password is required",
   "setting.export-to-mobile.input.password.error.invalid": "Invalid password",
@@ -74,7 +74,7 @@
   "setting.keyring": "Select Account",
   "setting.keyring.button.add": "Add Account",
   "setting.keyring.button.import": "Import Account",
-  "setting.keyring.unnamed-account": "Keplr Account",
+  "setting.keyring.unnamed-account": "Mises Account",
   "setting.keyring.selected-account": "(Selected)",
 
   "setting.keyring.change.password": "Reset Password",
@@ -95,7 +95,7 @@
   "setting.keyring.import.name": "Import Private Key",
   "setting.keyring.import.input.name": "New account name",
   "setting.keyring.import.input.name.error.required": "Account name is required",
-  "setting.keyring.import.input.name.error.invalid": "Account name is invalid",
+  "setting.keyring.import.input.name.error.invalid": "PrivateKey is invalid",
   "setting.keyring.import.input.private-key.title": "Input your private key",
   "setting.keyring.import.name.button.save": "Created",
 
@@ -110,7 +110,7 @@
   "setting.clear": "Delete Account",
   "setting.clear.alert": "Make sure you’ve backed up your mnemonic seed before proceeding.",
   "setting.clear.button.back-up": "Back-up account",
-  "setting.clear.warning": "By deleting your account, you will no longer have access to your account on Keplr.",
+  "setting.clear.warning": "By deleting your account, you will no longer have access to your account on Mises.",
   "setting.clear.input.password": "Password",
   "setting.clear.input.password.error.required": "Password is required",
   "setting.clear.input.password.error.invalid": "Invalid password",
@@ -189,14 +189,14 @@
   "register.welcome.button.done": "Done",
 
   "chain.suggested.title": "Chain Add Request",
-  "chain.suggested.paragraph": "<b>{host}</b> would like to add blockchain <b>{chainId}</b> to Keplr.",
+  "chain.suggested.paragraph": "<b>{host}</b> would like to add blockchain <b>{chainId}</b> to Mises.",
   "chain.suggested.button.approve": "Approve",
   "chain.suggested.button.reject": "Reject",
 
   "chain.remove.confirm.paragraph": "Are you sure to remove the {chainName}?",
 
   "access.title": "Requesting Connection",
-  "access.paragraph": "<b>{host}</b> is requesting to connect to your Keplr account on <b>{chainId}</b>.",
+  "access.paragraph": "<b>{host}</b> is requesting to connect to your Mises account on <b>{chainId}</b>.",
   "access.permission.title": "By approving this request, the website will:",
   "access.permission.account": "Know your wallet address",
   "access.permission.tx-request": "Be able to request signatures for txs",
@@ -292,7 +292,7 @@
   "sign.list.message.wasm/MsgExecuteContract.title": "Execute Wasm Contract",
   "sign.list.message.wasm/MsgExecuteContract.content": "Execute contract <b>{address}</b><only-sent-exist> by sending <b>{sent}</b></only-sent-exist>",
   "sign.list.message.wasm/MsgExecuteContract.content.badge.secret-wasm": "Encrypted",
-  "sign.list.message.wasm/MsgExecuteContract.content.warning.secret-wasm.failed-decryption": "Failed to decrypt Secret message. This may be due to Keplr viewing key not matching the transaction viewing key.",
+  "sign.list.message.wasm/MsgExecuteContract.content.warning.secret-wasm.failed-decryption": "Failed to decrypt Secret message. This may be due to Mises viewing key not matching the transaction viewing key.",
 
   "sign.list.message.cyber/Link.title": "Cyberlink",
   "sign.list.message.cyber/Link.content": "<b>{neuron}</b> create link {br}<b>{link}</b>",
